--- a/edition.html
+++ b/edition.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="one-quarter" style="padding: 10px;">
 					<div class="center w100p">
-						<button onclick="location.href='http://google.com';" style="height: 100px;">Nouvel élément</button>
+						<button onclick="location.href='newelement.html';" style="height: 100px;">Nouvel élément</button>
 					</div>	
 				</div>
 			</div>
